--- a/style.css
+++ b/style.css
@@ -18,4 +18,15 @@ img {
 
 #btn1 {
   background-color: #ffb0c8;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 10px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+#btn1:hover {
+  background-color: #ff85a1;
 }/*# sourceMappingURL=style.css.map */
