--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ img {
 }
 
 #btn1 {
-  background-color: #ffb0c8;
+  background-color: #ff85a1;
   color: white;
   border: none;
   padding: 10px 20px;
@@ -28,5 +28,14 @@ img {
 }
 
 #btn1:hover {
-  background-color: #ff85a1;
+  background-color: #ffb0c8;
+}
+
+.titulo {
+  text-align: center;
+  margin: 20px 0;
+  color: #ff85a1;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 36px;
+  letter-spacing: 2px;
 }/*# sourceMappingURL=style.css.map */
