--- a/style.scss
+++ b/style.scss
@@ -29,7 +29,7 @@ img {
 
 // Selecionando ID, deve ser único na página, ou seja, não podemos usar o mesmo nome de ID mais de uma vez na mesma página.
 #btn1 {
-    background-color: #ffb0c8;
+    background-color: #ff85a1;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -39,5 +39,14 @@ img {
     transition: background-color 0.3s;
 }
 #btn1:hover {
-    background-color: #ff85a1;
+    background-color: #ffb0c8;
+}
+.titulo {
+    text-align: center;
+    margin: 20px 0;
+    color: #ff85a1;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 36px;
+    letter-spacing: 2px;
+    
 }
